--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "framer-motion": "^11.3.24",
     "react": "^18.3.1",
     "react-calendly": "^4.4.0",
